I wanna order figures... :(

--- a/christmas/index.html
+++ b/christmas/index.html
@@ -161,8 +161,8 @@
                 <button>Felvétel</button>
             </form>
     </div>
-
+    <script src="func.js"></script>
     <script src="common.js"></script>
-    <script src="index.js"></script>
+    <script src="indexnew.js"></script>
 </body>
 </html>
